--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@
                     <br />
                     Find v<sub>1</sub> and v<sub>g</sub> in the circuit shown in
                     the figure when v<sub>0</sub> equals
-                    <input id="p10-v0" type="number" />. (Hint: Start at the
+                    <input id="p10-V0" type="number" />. (Hint: Start at the
                     right end of the circuit and work back toward
                     v<sub>g</sub>).
                   </p>
