--- a/index.html
+++ b/index.html
@@ -88,10 +88,7 @@
                   </h4>
                   <div>
                     <h4 class="font-bold text-lg">Answer:</h4>
-                    <p>
-                      V<sub>0</sub> = [R<sub>1</sub> + R<sub>2</sub> - &alpha; *
-                      R<sub>2</sub>] * I = <span id="p1-a-answer"></span>
-                    </p>
+                    <p>V<sub>0</sub> = <span id="p1-a-answer"></span></p>
                     <button
                       id="p1-a-submit"
                       class="mt-2 py-2 px-4 bg-green-500 rounded-md text-white hover:bg-opacity-70 duration-150"
@@ -1193,11 +1190,11 @@
                   <p>
                     <span class="font-bold text-lg">Part A </span>
                     <br />
-                    Find v<sub>1</sub> and v<sub>g</sub> in the circuit shown in
-                    the figure when v<sub>0</sub> equals
+                    Find V<sub>1</sub> and V<sub>g</sub> in the circuit shown in
+                    the figure when V<sub>0</sub> equals
                     <input id="p10-V0" type="number" />. (Hint: Start at the
                     right end of the circuit and work back toward
-                    v<sub>g</sub>).
+                    V<sub>g</sub>).
                   </p>
                   <h4 class="font-bold text-md">
                     Express your answer to two significant figures separated by
@@ -1206,7 +1203,7 @@
                   <div>
                     <h4 class="font-bold text-lg">Answer:</h4>
                     <p>
-                      v<sub>1</sub>, v<sub>g</sub> =
+                      V<sub>1</sub>, V<sub>g</sub> =
                       <span id="p10-a-answer"></span>
                     </p>
                     <button
