--- a/index.html
+++ b/index.html
@@ -1231,6 +1231,9 @@
       <!-- End Content -->
     </div>
     <script src="./js/main.js"></script>
-    <script src="./js/chapters/chapter-1.js"></script>
+    <script
+      class="data-chapter-script"
+      src="./js/chapters/chapter-1.js"
+    ></script>
   </body>
 </html>
