--- a/index.html
+++ b/index.html
@@ -10,27 +10,48 @@
     <div class="flex">
       <!-- Start Aside -->
       <aside
-        class="flex flex-col p-6 w-64 bg-darkSlateGray fixed inset-y-0 left-0"
+        id="aside"
+        class="flex justify-center p-6 w-20 md:w-64 bg-darkSlateGray fixed inset-y-0 left-0 overflow-hidden z-10"
       >
-        <h2 class="font-bold text-2xl mb-6 text-lightGray">
-          Electrical Circuits
-        </h2>
-        <ul class="space-y-4">
-          <li><a href="" class="aside-link selected">Chapter 1</a></li>
-          <li><a href="" class="aside-link">Chapter 2</a></li>
-          <li><a href="" class="aside-link">Chapter 3</a></li>
-          <li><a href="" class="aside-link">Chapter 4</a></li>
-          <li><a href="" class="aside-link">Chapter 5</a></li>
-          <li><a href="" class="aside-link">Chapter 6</a></li>
-          <li><a href="" class="aside-link">Chapter 7</a></li>
-          <li><a href="" class="aside-link">Chapter 8</a></li>
-          <li><a href="" class="aside-link">Chapter 9</a></li>
-          <li><a href="" class="aside-link">Chapter 10</a></li>
-        </ul>
+        <div id="aside-content" class="hidden md:block">
+          <h2 class="font-bold text-2xl mb-6 text-lightGray">
+            Electrical Circuits
+          </h2>
+          <ul class="space-y-4">
+            <li><a href="" class="aside-link selected">Chapter 1</a></li>
+            <li><a href="" class="aside-link">Chapter 2</a></li>
+            <li><a href="" class="aside-link">Chapter 3</a></li>
+            <li><a href="" class="aside-link">Chapter 4</a></li>
+            <li><a href="" class="aside-link">Chapter 5</a></li>
+            <li><a href="" class="aside-link">Chapter 6</a></li>
+            <li><a href="" class="aside-link">Chapter 7</a></li>
+            <li><a href="" class="aside-link">Chapter 8</a></li>
+            <li><a href="" class="aside-link">Chapter 9</a></li>
+            <li><a href="" class="aside-link">Chapter 10</a></li>
+          </ul>
+        </div>
+        <div class="flex items-start">
+          <button id="aside-toggle" class="text-lightGray">
+            <svg
+              class="w-8 h-8"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h16M4 18h16"
+              ></path>
+            </svg>
+          </button>
+        </div>
       </aside>
       <!-- End Aside -->
       <!-- Start Content -->
-      <div id="content" class="ml-64 p-6 flex-grow space-y-6"></div>
+      <div id="content" class="ml-20 md:ml-64 p-6 flex-grow space-y-6"></div>
       <!-- End Content -->
     </div>
     <script src="./js/main.js"></script>
