--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <div id="content" class="ml-20 md:ml-64 p-6 flex-grow space-y-6"></div>
       <!-- End Content -->
     </div>
+    <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/main.js"></script>
     <script
       class="data-chapter-script"
