--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </div>
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/math.js" type="text/javascript"></script>
     <script
       class="data-chapter-script"
       src="./js/chapters/chapter-1.js"
