--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- End Content -->
     </div>
     <script src="./js/jquery-3.7.1.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script id="main-js" src="./js/main.js"></script>
     <script src="./js/math.js" type="text/javascript"></script>
     <script
       class="data-chapter-script"
